# image-qa-agent

./: .gitignore  README.md  app.py  check_claude_models.py  pyproject.toml
agent/: annotator.py  scorer.py
utils/: image_utils.py
